bug 235832, dynamic_cast crashes. replace with static_cast. r=bzbarsky sr=darin